--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,5 @@ file(GLOB SOURCES ./src/* main.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-add_subdirectory(test)
+# add_subdirectory(test)
+add_subdirectory(examples/example_msaa)
