bugfix: load model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 # add_subdirectory(test)
 add_subdirectory(examples/example_msaa)
 add_subdirectory(examples/example_shadow)
+add_subdirectory(examples/example_ambient_occlusion)
