implement point light

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 add_subdirectory(examples/example_msaa)
 add_subdirectory(examples/example_shadow)
 add_subdirectory(examples/example_ambient_occlusion)
+add_subdirectory(examples/example_point_light)
