--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ add_subdirectory(examples/example_msaa)
 add_subdirectory(examples/example_shadow)
 add_subdirectory(examples/example_ambient_occlusion)
 add_subdirectory(examples/example_point_light)
+add_subdirectory(examples/example_alpha_blend)
