--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,6 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 # add_subdirectory(test)
 add_subdirectory(examples/example_msaa)
 add_subdirectory(examples/example_shadow)
-add_subdirectory(examples/example_ambient_occlusion)
+# add_subdirectory(examples/example_ambient_occlusion)
 add_subdirectory(examples/example_point_light)
 add_subdirectory(examples/example_alpha_blend)
